CarbonROM: call recorder switch

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -150,4 +150,11 @@
     <string name="incoming_call_style_classic">Classic</string>
     <string name="incoming_call_style_fullscreen_photo">Fullscreen caller photo</string>
 
+    <!-- Call Recording -->
+    <string name="allow_call_recording_title">Allow call recording</string>
+    <string name="allow_call_recording_summary">Show call recording button during a call</string>
+
+    <!-- Waiver -->
+    <string name="call_recording_waiver_title">Waiver</string>
+    <string name="call_recording_waiver_body">Changing this setting may be against your state or government laws.\n\nIn selecting \'OK\' below, you acknowledge this warning and waive, indemnify and hold harmless CyanogenMod and its contributors from all legal liabilities.</string>
 </resources>
