Slim: Enable speaker with proximity during call

--- a/res/xml/call_feature_setting.xml
+++ b/res/xml/call_feature_setting.xml
@@ -227,6 +227,13 @@
       android:entryValues="@array/incoming_call_style_values"
       android:persistent="false" />
 
+  <CheckBoxPreference   
+      android:key="prox_auto_speaker" 
+      android:title="@string/prox_auto_speaker_title" 
+      android:summary="@string/prox_auto_speaker_summary" 
+      android:persistent="false"  
+      android:defaultValue="false" />
+
   <CheckBoxPreference
       android:key="button_play_dtmf_tone"
       android:title="@string/dtmf_tone_enable_title"
