Slim: Enable speaker proximity only during call

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -80,6 +80,8 @@
     <!-- Strings for speaker on proximity during call-->
     <string name="prox_auto_speaker_title">Automatic proximity speaker</string>
     <string name="prox_auto_speaker_summary">Enable speakerphone when the device is removed from your face</string>
+    <string name="prox_auto_speaker_incall_only_title">Only while in call</string> 
+    <string name="prox_auto_speaker_incall_only_summary">Proximity sensor toggles speaker, but not while ringing</string>
 
     <!-- Permission for notification-bar network toggle -->
     <string name="perm_change_mobile_network">change network mode (2G/3G)</string>
